Services/speedtest-vpn/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: speedtest-vpn-service
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.1.56
    ports:
      - port: 2104
