Services/speedtest-vpn/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-vpn-service
  namespace: external-services
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2104
